force-app/main/default/objects/System_Notification__e/System_Notification__e.object-meta.xml
<CustomObject>
    <description>To publish errors and logs</description>
    <label>System Notification</label>
    <pluralLabel>System Notifications</pluralLabel>
</CustomObject>