force-app/main/default/objects/System_Notification__e/fields/Actor_Id__c.field-meta.xml
<CustomField>
    <fullName>Actor_Id__c</fullName>
    <description>Actor who is executing the operation</description>
    <label>Actor Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>