force-app/main/default/objects/System_Notification__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>APEX CLASS, APEX TRIGGER, PROCESS BUILDER, VLOCITY OMNISCRIPT, VLOCITY DATA RAPTOR, BATCH, CALLOUT</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>