force-app/main/default/objects/System_Notification__e/fields/Exception_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Exception_Line_Number__c</fullName>
    <description>line number from where the exception was thrown.</description>
    <label>Exception Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>