force-app/main/default/objects/System_Notification__e/fields/Exception_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type_Name__c</fullName>
    <description>the type of exception, such as DmlException, ListException, MathException, and so on.</description>
    <label>Exception Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>