force-app/main/default/objects/System_Notification__e/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>name of the function which originated the notification</description>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>