force-app/main/default/objects/System_Notification__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Failure Record ids</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>