force-app/main/default/objects/System_Notification__e/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Request body for the external/internal callouts</description>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>