force-app/main/default/objects/System_Notification__e/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Response body for the external/internal callouts</description>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>